src/simple3Parser.java
// $ANTLR 3.5.2 C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g 2015-12-18 12:20:18

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class simple3Parser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "ESC_SEQ", "NUM", "STRING", 
		"VAR", "WS", "'('", "')'", "'*'", "'+'", "','", "'-'", "'->'", "'/'", 
		"';'", "'<='", "'='", "'=='", "'Part'", "'create song '", "'declare'", 
		"'else'", "'fun'", "'generate'", "'get'", "'if'", "'on'", "'play'", "'put'", 
		"'return'", "'while'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int COMMENT=4;
	public static final int ESC_SEQ=5;
	public static final int NUM=6;
	public static final int STRING=7;
	public static final int VAR=8;
	public static final int WS=9;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public simple3Parser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public simple3Parser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return simple3Parser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g"; }


	// override the default error reporting functions
	public void reportError(RecognitionException e) {
	    // call the Parser member function to report the error
	    displayRecognitionError(this.getTokenNames(), e);
	    // exit with error
	    System.exit(1);
	}



	// $ANTLR start "prog"
	// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:23:1: prog returns [AST ast] : ( stmt )+ ;
	public final AST prog() throws RecognitionException {
		AST ast = null;


		Stmt stmt1 =null;

		try {
			// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:24:2: ( ( stmt )+ )
			// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:24:4: ( stmt )+
			{
			ast = new StmtList();
			// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:24:29: ( stmt )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==VAR||(LA1_0 >= 22 && LA1_0 <= 24)||(LA1_0 >= 26 && LA1_0 <= 29)||(LA1_0 >= 31 && LA1_0 <= 35)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:24:30: stmt
					{
					pushFollow(FOLLOW_stmt_in_prog39);
					stmt1=stmt();
					state._fsp--;

					ast.addAST(stmt1);
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return ast;
	}
	// $ANTLR end "prog"



	// $ANTLR start "stmt"
	// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:27:1: stmt returns [Stmt ast] : ( 'create song ' STRING ( ';' )? | 'generate' ( ';' )? | 'Part' exp ( ';' )? | 'play' num= exp ntype= VAR 'on' instr= exp ( ';' )? | 'fun' VAR '(' ')' s= stmt | 'fun' VAR '(' l= formalParamList ')' s= stmt | 'declare' VAR '=' exp ( ';' )? | 'declare' VAR ( ';' )? | VAR '=' exp ( ';' )? | 'get' VAR ( ';' )? | 'put' exp ( ';' )? | VAR '(' ')' ( ';' )? | VAR '(' l= actualParamList ')' ( ';' )? | 'return' exp ( ';' )? | 'return' ( ';' )? | 'while' '(' exp ')' s= stmt | 'if' '(' exp ')' s1= stmt ( 'else' s2= stmt )? | '{' (s= stmt )+ '}' );
	public final Stmt stmt() throws RecognitionException {
		Stmt ast = null;


		Token ntype=null;
		Token STRING2=null;
		Token VAR4=null;
		Token VAR5=null;
		Token VAR6=null;
		Token VAR8=null;
		Token VAR9=null;
		Token VAR11=null;
		Token VAR13=null;
		Token VAR14=null;
		Expr num =null;
		Expr instr =null;
		Stmt s =null;
		ArgList l =null;
		Stmt s1 =null;
		Stmt s2 =null;
		Expr exp3 =null;
		Expr exp7 =null;
		Expr exp10 =null;
		Expr exp12 =null;
		Expr exp15 =null;
		Expr exp16 =null;
		Expr exp17 =null;

		try {
			// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:28:2: ( 'create song ' STRING ( ';' )? | 'generate' ( ';' )? | 'Part' exp ( ';' )? | 'play' num= exp ntype= VAR 'on' instr= exp ( ';' )? | 'fun' VAR '(' ')' s= stmt | 'fun' VAR '(' l= formalParamList ')' s= stmt | 'declare' VAR '=' exp ( ';' )? | 'declare' VAR ( ';' )? | VAR '=' exp ( ';' )? | 'get' VAR ( ';' )? | 'put' exp ( ';' )? | VAR '(' ')' ( ';' )? | VAR '(' l= actualParamList ')' ( ';' )? | 'return' exp ( ';' )? | 'return' ( ';' )? | 'while' '(' exp ')' s= stmt | 'if' '(' exp ')' s1= stmt ( 'else' s2= stmt )? | '{' (s= stmt )+ '}' )
			int alt17=18;
			alt17 = dfa17.predict(input);
			switch (alt17) {
				case 1 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:28:4: 'create song ' STRING ( ';' )?
					{
					match(input,23,FOLLOW_23_in_stmt58); 
					STRING2=(Token)match(input,STRING,FOLLOW_STRING_in_stmt60); 
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:28:26: ( ';' )?
					int alt2=2;
					int LA2_0 = input.LA(1);
					if ( (LA2_0==18) ) {
						alt2=1;
					}
					switch (alt2) {
						case 1 :
							// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:28:26: ';'
							{
							match(input,18,FOLLOW_18_in_stmt62); 
							}
							break;

					}

					 ast = new CreateSongStmt((STRING2!=null?STRING2.getText():null)); 
					}
					break;
				case 2 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:29:17: 'generate' ( ';' )?
					{
					match(input,27,FOLLOW_27_in_stmt104); 
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:29:28: ( ';' )?
					int alt3=2;
					int LA3_0 = input.LA(1);
					if ( (LA3_0==18) ) {
						alt3=1;
					}
					switch (alt3) {
						case 1 :
							// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:29:28: ';'
							{
							match(input,18,FOLLOW_18_in_stmt106); 
							}
							break;

					}

					 ast = new GenerateStmt(); 
					}
					break;
				case 3 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:30:17: 'Part' exp ( ';' )?
					{
					match(input,22,FOLLOW_22_in_stmt159); 
					pushFollow(FOLLOW_exp_in_stmt161);
					exp3=exp();
					state._fsp--;

					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:30:28: ( ';' )?
					int alt4=2;
					int LA4_0 = input.LA(1);
					if ( (LA4_0==18) ) {
						alt4=1;
					}
					switch (alt4) {
						case 1 :
							// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:30:28: ';'
							{
							match(input,18,FOLLOW_18_in_stmt163); 
							}
							break;

					}

					 ast = new PartStmt(exp3); 
					}
					break;
				case 4 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:31:17: 'play' num= exp ntype= VAR 'on' instr= exp ( ';' )?
					{
					match(input,31,FOLLOW_31_in_stmt217); 
					pushFollow(FOLLOW_exp_in_stmt221);
					num=exp();
					state._fsp--;

					ntype=(Token)match(input,VAR,FOLLOW_VAR_in_stmt225); 
					match(input,30,FOLLOW_30_in_stmt227); 
					pushFollow(FOLLOW_exp_in_stmt231);
					instr=exp();
					state._fsp--;

					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:31:57: ( ';' )?
					int alt5=2;
					int LA5_0 = input.LA(1);
					if ( (LA5_0==18) ) {
						alt5=1;
					}
					switch (alt5) {
						case 1 :
							// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:31:57: ';'
							{
							match(input,18,FOLLOW_18_in_stmt233); 
							}
							break;

					}

					 ast = new PhraseStmt(num, (ntype!=null?ntype.getText():null), instr); 
					}
					break;
				case 5 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:32:17: 'fun' VAR '(' ')' s= stmt
					{
					match(input,26,FOLLOW_26_in_stmt257); 
					VAR4=(Token)match(input,VAR,FOLLOW_VAR_in_stmt259); 
					match(input,10,FOLLOW_10_in_stmt261); 
					match(input,11,FOLLOW_11_in_stmt263); 
					pushFollow(FOLLOW_stmt_in_stmt267);
					s=stmt();
					state._fsp--;

					 ast = new FuncDeclStmt((VAR4!=null?VAR4.getText():null),new Function(new ArgList(),s)); 
					}
					break;
				case 6 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:33:4: 'fun' VAR '(' l= formalParamList ')' s= stmt
					{
					match(input,26,FOLLOW_26_in_stmt276); 
					VAR5=(Token)match(input,VAR,FOLLOW_VAR_in_stmt278); 
					match(input,10,FOLLOW_10_in_stmt280); 
					pushFollow(FOLLOW_formalParamList_in_stmt284);
					l=formalParamList();
					state._fsp--;

					match(input,11,FOLLOW_11_in_stmt286); 
					pushFollow(FOLLOW_stmt_in_stmt290);
					s=stmt();
					state._fsp--;

					 ast = new FuncDeclStmt((VAR5!=null?VAR5.getText():null),new Function(l,s)); 
					}
					break;
				case 7 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:34:4: 'declare' VAR '=' exp ( ';' )?
					{
					match(input,24,FOLLOW_24_in_stmt297); 
					VAR6=(Token)match(input,VAR,FOLLOW_VAR_in_stmt299); 
					match(input,20,FOLLOW_20_in_stmt301); 
					pushFollow(FOLLOW_exp_in_stmt303);
					exp7=exp();
					state._fsp--;

					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:34:26: ( ';' )?
					int alt6=2;
					int LA6_0 = input.LA(1);
					if ( (LA6_0==18) ) {
						alt6=1;
					}
					switch (alt6) {
						case 1 :
							// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:34:26: ';'
							{
							match(input,18,FOLLOW_18_in_stmt305); 
							}
							break;

					}

					 ast = new VarDeclStmt((VAR6!=null?VAR6.getText():null),exp7); 
					}
					break;
				case 8 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:35:4: 'declare' VAR ( ';' )?
					{
					match(input,24,FOLLOW_24_in_stmt315); 
					VAR8=(Token)match(input,VAR,FOLLOW_VAR_in_stmt317); 
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:35:18: ( ';' )?
					int alt7=2;
					int LA7_0 = input.LA(1);
					if ( (LA7_0==18) ) {
						alt7=1;
					}
					switch (alt7) {
						case 1 :
							// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:35:18: ';'
							{
							match(input,18,FOLLOW_18_in_stmt319); 
							}
							break;

					}

					 ast = new VarDeclStmt((VAR8!=null?VAR8.getText():null),new NumExpr(0)); 
					}
					break;
				case 9 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:36:4: VAR '=' exp ( ';' )?
					{
					VAR9=(Token)match(input,VAR,FOLLOW_VAR_in_stmt330); 
					match(input,20,FOLLOW_20_in_stmt332); 
					pushFollow(FOLLOW_exp_in_stmt334);
					exp10=exp();
					state._fsp--;

					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:36:16: ( ';' )?
					int alt8=2;
					int LA8_0 = input.LA(1);
					if ( (LA8_0==18) ) {
						alt8=1;
					}
					switch (alt8) {
						case 1 :
							// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:36:16: ';'
							{
							match(input,18,FOLLOW_18_in_stmt336); 
							}
							break;

					}

					 ast = new AssignStmt((VAR9!=null?VAR9.getText():null),exp10); 
					}
					break;
				case 10 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:37:4: 'get' VAR ( ';' )?
					{
					match(input,28,FOLLOW_28_in_stmt347); 
					VAR11=(Token)match(input,VAR,FOLLOW_VAR_in_stmt349); 
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:37:14: ( ';' )?
					int alt9=2;
					int LA9_0 = input.LA(1);
					if ( (LA9_0==18) ) {
						alt9=1;
					}
					switch (alt9) {
						case 1 :
							// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:37:14: ';'
							{
							match(input,18,FOLLOW_18_in_stmt351); 
							}
							break;

					}

					 ast = new GetStmt((VAR11!=null?VAR11.getText():null)); 
					}
					break;
				case 11 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:38:4: 'put' exp ( ';' )?
					{
					match(input,32,FOLLOW_32_in_stmt363); 
					pushFollow(FOLLOW_exp_in_stmt365);
					exp12=exp();
					state._fsp--;

					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:38:14: ( ';' )?
					int alt10=2;
					int LA10_0 = input.LA(1);
					if ( (LA10_0==18) ) {
						alt10=1;
					}
					switch (alt10) {
						case 1 :
							// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:38:14: ';'
							{
							match(input,18,FOLLOW_18_in_stmt367); 
							}
							break;

					}

					 ast = new PutStmt(exp12); 
					}
					break;
				case 12 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:39:4: VAR '(' ')' ( ';' )?
					{
					VAR13=(Token)match(input,VAR,FOLLOW_VAR_in_stmt379); 
					match(input,10,FOLLOW_10_in_stmt381); 
					match(input,11,FOLLOW_11_in_stmt383); 
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:39:16: ( ';' )?
					int alt11=2;
					int LA11_0 = input.LA(1);
					if ( (LA11_0==18) ) {
						alt11=1;
					}
					switch (alt11) {
						case 1 :
							// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:39:16: ';'
							{
							match(input,18,FOLLOW_18_in_stmt385); 
							}
							break;

					}

					 ast = new CallStmt((VAR13!=null?VAR13.getText():null));
					}
					break;
				case 13 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:40:4: VAR '(' l= actualParamList ')' ( ';' )?
					{
					VAR14=(Token)match(input,VAR,FOLLOW_VAR_in_stmt396); 
					match(input,10,FOLLOW_10_in_stmt398); 
					pushFollow(FOLLOW_actualParamList_in_stmt402);
					l=actualParamList();
					state._fsp--;

					match(input,11,FOLLOW_11_in_stmt404); 
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:40:34: ( ';' )?
					int alt12=2;
					int LA12_0 = input.LA(1);
					if ( (LA12_0==18) ) {
						alt12=1;
					}
					switch (alt12) {
						case 1 :
							// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:40:34: ';'
							{
							match(input,18,FOLLOW_18_in_stmt406); 
							}
							break;

					}

					 ast = new CallStmt((VAR14!=null?VAR14.getText():null),l);
					}
					break;
				case 14 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:41:4: 'return' exp ( ';' )?
					{
					match(input,33,FOLLOW_33_in_stmt415); 
					pushFollow(FOLLOW_exp_in_stmt417);
					exp15=exp();
					state._fsp--;

					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:41:17: ( ';' )?
					int alt13=2;
					int LA13_0 = input.LA(1);
					if ( (LA13_0==18) ) {
						alt13=1;
					}
					switch (alt13) {
						case 1 :
							// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:41:17: ';'
							{
							match(input,18,FOLLOW_18_in_stmt419); 
							}
							break;

					}

					 ast = new ReturnStmt(exp15); 
					}
					break;
				case 15 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:42:4: 'return' ( ';' )?
					{
					match(input,33,FOLLOW_33_in_stmt430); 
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:42:13: ( ';' )?
					int alt14=2;
					int LA14_0 = input.LA(1);
					if ( (LA14_0==18) ) {
						alt14=1;
					}
					switch (alt14) {
						case 1 :
							// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:42:13: ';'
							{
							match(input,18,FOLLOW_18_in_stmt432); 
							}
							break;

					}

					 ast = new ReturnStmt(); 
					}
					break;
				case 16 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:43:4: 'while' '(' exp ')' s= stmt
					{
					match(input,34,FOLLOW_34_in_stmt444); 
					match(input,10,FOLLOW_10_in_stmt446); 
					pushFollow(FOLLOW_exp_in_stmt448);
					exp16=exp();
					state._fsp--;

					match(input,11,FOLLOW_11_in_stmt450); 
					pushFollow(FOLLOW_stmt_in_stmt454);
					s=stmt();
					state._fsp--;

					 ast = new WhileStmt(exp16,s); 
					}
					break;
				case 17 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:44:4: 'if' '(' exp ')' s1= stmt ( 'else' s2= stmt )?
					{
					match(input,29,FOLLOW_29_in_stmt463); 
					match(input,10,FOLLOW_10_in_stmt465); 
					pushFollow(FOLLOW_exp_in_stmt467);
					exp17=exp();
					state._fsp--;

					match(input,11,FOLLOW_11_in_stmt469); 
					pushFollow(FOLLOW_stmt_in_stmt473);
					s1=stmt();
					state._fsp--;

					ast = new IfStmt(exp17,s1);
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:44:67: ( 'else' s2= stmt )?
					int alt15=2;
					int LA15_0 = input.LA(1);
					if ( (LA15_0==25) ) {
						alt15=1;
					}
					switch (alt15) {
						case 1 :
							// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:44:68: 'else' s2= stmt
							{
							match(input,25,FOLLOW_25_in_stmt477); 
							pushFollow(FOLLOW_stmt_in_stmt481);
							s2=stmt();
							state._fsp--;

							ast.addAST(s2);
							}
							break;

					}

					}
					break;
				case 18 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:45:4: '{' (s= stmt )+ '}'
					{
					match(input,35,FOLLOW_35_in_stmt492); 
					ast = new BlockStmt();
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:45:34: (s= stmt )+
					int cnt16=0;
					loop16:
					while (true) {
						int alt16=2;
						int LA16_0 = input.LA(1);
						if ( (LA16_0==VAR||(LA16_0 >= 22 && LA16_0 <= 24)||(LA16_0 >= 26 && LA16_0 <= 29)||(LA16_0 >= 31 && LA16_0 <= 35)) ) {
							alt16=1;
						}

						switch (alt16) {
						case 1 :
							// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:45:35: s= stmt
							{
							pushFollow(FOLLOW_stmt_in_stmt499);
							s=stmt();
							state._fsp--;

							ast.addAST(s);
							}
							break;

						default :
							if ( cnt16 >= 1 ) break loop16;
							EarlyExitException eee = new EarlyExitException(16, input);
							throw eee;
						}
						cnt16++;
					}

					match(input,36,FOLLOW_36_in_stmt505); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return ast;
	}
	// $ANTLR end "stmt"



	// $ANTLR start "formalParamList"
	// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:48:1: formalParamList returns [ArgList ast] : v1= VAR ( ',' v2= VAR )* ;
	public final ArgList formalParamList() throws RecognitionException {
		ArgList ast = null;


		Token v1=null;
		Token v2=null;

		try {
			// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:49:2: (v1= VAR ( ',' v2= VAR )* )
			// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:49:4: v1= VAR ( ',' v2= VAR )*
			{
			v1=(Token)match(input,VAR,FOLLOW_VAR_in_formalParamList522); 
			ast = new ArgList(new VarExpr((v1!=null?v1.getText():null)));
			// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:49:55: ( ',' v2= VAR )*
			loop18:
			while (true) {
				int alt18=2;
				int LA18_0 = input.LA(1);
				if ( (LA18_0==14) ) {
					alt18=1;
				}

				switch (alt18) {
				case 1 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:49:56: ',' v2= VAR
					{
					match(input,14,FOLLOW_14_in_formalParamList526); 
					v2=(Token)match(input,VAR,FOLLOW_VAR_in_formalParamList530); 
					ast.addAST(new VarExpr((v2!=null?v2.getText():null)));
					}
					break;

				default :
					break loop18;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return ast;
	}
	// $ANTLR end "formalParamList"



	// $ANTLR start "actualParamList"
	// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:52:1: actualParamList returns [ArgList ast] : (e1= exp ( ',' e2= exp )* |v1= VAR '->' e1= exp ( ',' v2= VAR '->' e2= exp )* );
	public final ArgList actualParamList() throws RecognitionException {
		ArgList ast = null;


		Token v1=null;
		Token v2=null;
		Expr e1 =null;
		Expr e2 =null;

		try {
			// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:53:2: (e1= exp ( ',' e2= exp )* |v1= VAR '->' e1= exp ( ',' v2= VAR '->' e2= exp )* )
			int alt21=2;
			int LA21_0 = input.LA(1);
			if ( ((LA21_0 >= NUM && LA21_0 <= STRING)||LA21_0==10||LA21_0==15) ) {
				alt21=1;
			}
			else if ( (LA21_0==VAR) ) {
				int LA21_2 = input.LA(2);
				if ( ((LA21_2 >= 10 && LA21_2 <= 15)||LA21_2==17||LA21_2==19||LA21_2==21) ) {
					alt21=1;
				}
				else if ( (LA21_2==16) ) {
					alt21=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 21, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 21, 0, input);
				throw nvae;
			}

			switch (alt21) {
				case 1 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:53:4: e1= exp ( ',' e2= exp )*
					{
					pushFollow(FOLLOW_exp_in_actualParamList553);
					e1=exp();
					state._fsp--;


					                    ast = new ArgList(e1);
					                
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:55:19: ( ',' e2= exp )*
					loop19:
					while (true) {
						int alt19=2;
						int LA19_0 = input.LA(1);
						if ( (LA19_0==14) ) {
							alt19=1;
						}

						switch (alt19) {
						case 1 :
							// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:55:20: ',' e2= exp
							{
							match(input,14,FOLLOW_14_in_actualParamList558); 
							pushFollow(FOLLOW_exp_in_actualParamList562);
							e2=exp();
							state._fsp--;

							ast.addAST(e2);
							}
							break;

						default :
							break loop19;
						}
					}

					}
					break;
				case 2 :
					// C:\\Users\\bpyne\\NetBeansProjects\\MakingMusic\\src\\simple3.g:56:17: v1= VAR '->' e1= exp ( ',' v2= VAR '->' e2= exp )*
					{
					v1=(Token)match(input,VAR,FOLLOW_VAR_in_actualParamList587); 
					match(input,16,FOLLOW_16_in_actualParamList589); 
					pushFollow(FOLLOW_exp_in_actualParamList593);
					e1=exp();
					state._fsp--;


